--- a/cmd/really/CMakeLists.txt
+++ b/cmd/really/CMakeLists.txt
@@ -1,4 +1,5 @@
-find_package(OpenCV REQUIRED)
+#find_package(OpenCV REQUIRED)
+find_package(OpenCV REQUIRED COMPONENTS core imgproc imgcodecs)
 
 message(STATUS "OpenCV library status:")
 message(STATUS "    config: ${OpenCV_DIR}")
